# survey-analysis-app

./: .gitignore  DATA_SOURCES.md  LICENSE  Makefile  README.md  app_shared.py  pyproject.toml  requirements-dev.txt  requirements.txt  streamlit_app.py
Methedology/: Comprehensive_description  Research.md
assets/taxonomy/general/: theme_phrase_library.csv  theme_subtheme_dictionary_v3_enriched.json
assets/taxonomy/hearing/: theme_phrase_library.csv  theme_subtheme_dictionary_v3_enriched.json
assets/taxonomy/templates/: customer_feedback_template.csv  employee_engagement_template.csv  general_template.csv  product_feedback_template.csv
assets/taxonomy/wellbeing/: theme_phrase_library.csv  theme_subtheme_dictionary_v3_enrichedtemplate.json
config/: pipeline_settings.yaml  smoke_settings.yaml
config/profiles/general/: dictionary.yaml  profile.yaml  themes.yaml
config/profiles/hearing/: dictionary.yaml  profile.yaml  themes.yaml
config/profiles/pbt/: profile.yaml
config/profiles/template/: profile.yaml
config/profiles/wellbeing/: dictionary.yaml  profile.yaml  themes.yaml
docs/: databricks.md  dependencies.md  grouping.md  modules.md  pipeline.md  sentiment.md  taxonomy.md
notebooks/: 00_minimal_run.py  01_run_pipeline_minimal.py  02_debug_full.py  10_run_profile.py  11_unpack_bundle.py
pages/: 1_Data_Settings.py  2_Results.py  3_Dashboard.py  4_Taxonomy_Builder.py
scripts/: build_taxonomy.py  capture_streamlit_screenshots.py  create_profile.py  dev_setup.ps1  package_repo.py  run_app.ps1  smoke_test.py
src/survey_app/: __init__.py  cli.py  config_runtime.py  import_bootstrap.py  pipeline.py  run.py
src/survey_app/clean_normalise/: check_data_shape.py  clean_normalise.py
src/survey_app/grouping/: segmentation.py
src/survey_app/sentiment/: pyspark_sentiment.py  sentiment_module.py
src/survey_app/taxonomy/: cross_encoder_taxonomy.py  keyword_taxonomy.py  semantic_taxonomy.py
src/wellbeing_pipeline/: __init__.py  cli.py  config_runtime.py  databricks_helpers.py  import_bootstrap.py  pipeline.py  run.py
src/wellbeing_pipeline/clean_normalise/: null_text_detector.py
src/wellbeing_pipeline/grouping/: absa_module.py  segment_summary.py
src/wellbeing_pipeline/sentiment/: pyspark_sentiment.py  sentiment_module.py
src/wellbeing_pipeline/taxonomy/: compare_taxonomy_outputs.py  cross_encoder_taxonomy.py  semantic_taxonomy.py
(+19 files in other folders)
