[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "survey-analysis-app"
version = "0.1.0"
description = "General-purpose survey analysis app and NLP pipeline."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Nyasha Gwaze", email = "nyasha.gwaze1@gmail.com" }]

[project.urls]
Repository = "https://github.com/nyashagwaze/survey-analysis-app"
Issues = "https://github.com/nyashagwaze/survey-analysis-app/issues"

# Core runtime dependencies
dependencies = [
  "pandas>=1.5.0",
  "numpy>=1.23.0",
  "pyyaml>=6.0",
  "scikit-learn>=1.2.0",
  "sentence-transformers>=2.2.0",
  "transformers>=4.30.0",
  "torch>=2.0.0",
  "joblib>=1.2.0",
  "openpyxl>=3.1.0",
  "spacy>=3.5.0",
]

[project.optional-dependencies]
# Visuals and notebooks
viz = ["matplotlib>=3.7.0", "seaborn>=0.12.0", "wordcloud>=1.9.0"]
# Streamlit app
app = ["streamlit>=1.29.0"]
# Synthetic data generation
synthetic = ["python-dotenv>=1.0.0", "openai>=1.0.0"]
# Development tooling
dev = ["pytest>=7.4.0", "ruff>=0.3.0", "black>=24.0.0", "ipykernel>=6.29.0"]
# Spark (optional)
spark = ["pyspark>=3.5.0"]

[project.scripts]
survey-app = "survey_app.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
